noinst_LIBRARIES = libbtree.a

libbtree_a_SOURCES = \
bt_conv.c \
bt_close.c \
bt_debug.c \
bt_delete.c \
bt_get.c \
bt_open.c \
bt_overflow.c \
bt_page.c \
bt_put.c \
bt_search.c \
bt_seq.c \
bt_split.c \
bt_utils.c \
btree.h \
extern.h

INCLUDES = -I$(top_srcdir)/db/include -I$(top_srcdir)/src/common
