EXTRA_DIST = \
Application28_AppRuntime.mof \
Application28_BIOS.mof \
Application28_CheckAction.mof \
Application28_DeploymentModel.mof \
Application28_InstalledProduct.mof \
Application28_J2eeAppServer.mof \
Application28_J2eeAppServerStats.mof \
Application28_SystemSoftware.mof \
CIM_Application28.mof \
CIM_Core28.mof \
CIM_Database28.mof \
CIM_Device28.mof \
CIM_Event28.mof \
CIM_IPsecPolicy28.mof \
CIM_Interop28.mof \
CIM_Metrics28.mof \
CIM_Network28.mof \
CIM_Physical28.mof \
CIM_Policy28.mof \
CIM_Schema28.mof \
CIM_Support28.mof \
CIM_System28.mof \
CIM_User28.mof \
Core28_Capabilities.mof \
Core28_Collection.mof \
Core28_CoreElements.mof \
Core28_Device.mof \
Core28_MethodParms.mof \
Core28_Physical.mof \
Core28_PowerMgmt.mof \
Core28_ProductFRU.mof \
Core28_Qualifiers.mof \
Core28_Redundancy.mof \
Core28_Service.mof \
Core28_Settings.mof \
Core28_Software.mof \
Core28_Statistics.mof \
Core28_StorageExtent.mof \
Database28_Statistics.mof \
Database28_Storage.mof \
Database28_System.mof \
Device28_Controller.mof \
Device28_CoolingAndPower.mof \
Device28_DeviceElements.mof \
Device28_DiskGroup.mof \
Device28_FC.mof \
Device28_IB.mof \
Device28_Memory.mof \
Device28_Modems.mof \
Device28_NetworkAdapter.mof \
Device28_Ports.mof \
Device28_Printing.mof \
Device28_Processor.mof \
Device28_ProtocolController.mof \
Device28_SccExtents.mof \
Device28_Sensors.mof \
Device28_StorageDevices.mof \
Device28_StorageExtents.mof \
Device28_StorageLib.mof \
Device28_StorageServices.mof \
Device28_USB.mof \
Device28_UserDevices.mof \
Metrics28_BaseMetric.mof \
Metrics28_UnitOfWork.mof \
Network28_BGP.mof \
Network28_Buffers.mof \
Network28_Collections.mof \
Network28_Filtering.mof \
Network28_IPsec.mof \
Network28_OSPF.mof \
Network28_Pipes.mof \
Network28_ProtocolEndpoints.mof \
Network28_QoS.mof \
Network28_Routes.mof \
Network28_RoutingForwarding.mof \
Network28_SNMP.mof \
Network28_SwitchingBridging.mof \
Network28_Systems.mof \
Network28_VLAN.mof \
Physical28_Component.mof \
Physical28_Connector.mof \
Physical28_Link.mof \
Physical28_Misc.mof \
Physical28_Package.mof \
Physical28_PhysicalMedia.mof \
Physical28_StoragePackage.mof \
System28_Boot.mof \
System28_Diagnostics.mof \
System28_FileElements.mof \
System28_Logs.mof \
System28_OperatingSystem.mof \
System28_Processing.mof \
System28_SystemElements.mof \
System28_SystemResources.mof \
System28_Time.mof \
System28_Unix.mof \
User28_AccessControl.mof \
User28_Account.mof \
User28_AuthenticationReqmt.mof \
User28_Credential.mof \
User28_Group.mof \
User28_Identity.mof \
User28_Kerberos.mof \
User28_Org.mof \
User28_Privilege.mof \
User28_PrivilegeManagementService.mof \
User28_PublicKey.mof \
User28_Role.mof \
User28_SecurityLevel.mof \
User28_SecurityServices.mof \
User28_SharedSecret.mof \
User28_StorageHardwareID.mof \
User28_UsersAccess.mof

