noinst_LIBRARIES = libOW_cim.a

libOW_cim_a_SOURCES = \
OW_CIMValue.cpp \
OW_CIMValueCast.cpp \
OW_CIMBase.cpp \
OW_CIMClass.cpp \
OW_CIMDataType.cpp \
OW_CIMDateTime.cpp \
OW_CIMElement.cpp \
OW_CIMException.cpp \
OW_CIMFlavor.cpp \
OW_CIMInstance.cpp \
OW_CIMMethod.cpp \
OW_CIMNameSpace.cpp \
OW_CIMName.cpp \
OW_CIMNameSpaceUtils.cpp \
OW_CIMObjectPath.cpp \
OW_CIMParameter.cpp \
OW_CIMProperty.cpp \
OW_CIMQualifier.cpp \
OW_CIMQualifierType.cpp \
OW_CIMScope.cpp \
OW_CIMUrl.cpp \
OW_CIMParamValue.cpp

pkginclude_HEADERS = \
OW_CIM.hpp \
OW_CIMBase.hpp \
OW_CIMClass.hpp \
OW_CIMClassEnumeration.hpp \
OW_CIMDataType.hpp \
OW_CIMDateTime.hpp \
OW_CIMElement.hpp \
OW_CIMException.hpp \
OW_CIMFlavor.hpp \
OW_CIMFwd.hpp \
OW_CIMInstance.hpp \
OW_CIMInstanceEnumeration.hpp \
OW_CIMMethod.hpp \
OW_CIMName.hpp \
OW_CIMNameSpace.hpp \
OW_CIMNameSpaceUtils.hpp \
OW_CIMNULL.hpp \
OW_CIMObjectPath.hpp \
OW_CIMObjectPathEnumeration.hpp \
OW_CIMParameter.hpp \
OW_CIMProperty.hpp \
OW_CIMQualifier.hpp \
OW_CIMQualifierEnumeration.hpp \
OW_CIMQualifierType.hpp \
OW_CIMScope.hpp \
OW_CIMUrl.hpp \
OW_CIMValue.hpp \
OW_CIMValueCast.hpp \
OW_CIMParamValue.hpp


# Shouldn't depend on anything not in common. DON'T ADD ANYTHING TO THIS LIST!
INCLUDES = \
-I$(top_srcdir)/src/common \
-I$(top_srcdir)/src/ifcs

