noinst_LIBRARIES = libOW_ifcs.a

libOW_ifcs_a_SOURCES = \
OW_AuthenticationException.cpp \
OW_AuthenticatorIFC.cpp \
OW_Authorizer2IFC.cpp \
OW_AuthorizerIFC.cpp \
OW_CIMOMHandleIFC.cpp \
OW_CIMProtocolIFC.cpp \
OW_CIMProtocolIStreamIFC.cpp \
OW_ClientAuthCBIFC.cpp \
OW_IOIFC.cpp \
OW_RepositoryIFC.cpp \
OW_RequestHandlerIFC.cpp \
OW_SelectableCallbackIFC.cpp \
OW_SelectableIFC.cpp \
OW_SerializableIFC.cpp \
OW_ServiceIFC.cpp \
OW_ServiceEnvironmentIFC.cpp \
OW_CIMProtocolException.cpp \
OW_WQLIFC.cpp

pkginclude_HEADERS = \
OW_AuthenticationException.hpp \
OW_AuthenticatorIFC.hpp \
OW_Authorizer2IFC.hpp \
OW_AuthorizerIFC.hpp \
OW_CIMOMHandleIFC.hpp \
OW_CIMProtocolIFC.hpp \
OW_CIMProtocolIStreamIFC.hpp \
OW_ClientAuthCBIFC.hpp \
OW_IfcsFwd.hpp \
OW_IOIFC.hpp \
OW_RepositoryIFC.hpp \
OW_RequestHandlerIFC.hpp \
OW_ResultHandlerIFC.hpp \
OW_SelectableCallbackIFC.hpp \
OW_SelectableIFC.hpp \
OW_SerializableIFC.hpp \
OW_ServiceEnvironmentIFC.hpp \
OW_ServiceIFC.hpp \
OW_ServiceIFCNames.hpp \
OW_WQLIFC.hpp

# Shouldn't depend on anything not in common. DON'T ADD ANYTHING TO THIS LIST!
INCLUDES = \
-I$(top_srcdir)/src/common \
-I$(top_srcdir)/src/common/socket \
-I$(top_srcdir)/src/provider \
-I$(top_srcdir)/src/cim


