check_LIBRARIES = libCppUnit.a

libCppUnit_a_SOURCES = \
CppUnitException.cpp \
TestCase.cpp \
TestFailure.cpp \
TestResult.cpp \
TestRunner.cpp \
TestSuite.cpp \
TextTestResult.cpp \
CppUnitException.hpp \
TestCase.hpp \
TestSuite.hpp \
Guards.hpp \
TestFailure.hpp \
TextTestResult.hpp \
Test.hpp \
TestResult.hpp \
TestCaller.hpp \
TestRunner.hpp

INCLUDES = \
-I$(top_srcdir)/src/common \
-I$(top_srcdir)/src/cim
